--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
             <a href="#" class="stretched-link">Continue reading</a>
           </div>
           <div class="col-auto d-none d-lg-block">
-            <img src="https://source.unsplash.com/200x200/?girl" class="bd-placeholder-img" width="200" height="250">
+            <img src="https://source.unsplash.com/200x200/?study" class="bd-placeholder-img" width="200" height="250">
           </div>
         </div>
       </div>
@@ -209,7 +209,7 @@
             <a href="#" class="stretched-link">Continue reading</a>
           </div>
           <div class="col-auto d-none d-lg-block">
-            <img src="https://source.unsplash.com/200x200/?girl/anime" class="bd-placeholder-img" width="200"
+            <img src="https://source.unsplash.com/200x200/?anime" class="bd-placeholder-img" width="200"
               height="250">
           </div>
         </div>
@@ -232,7 +232,7 @@
             <a href="#" class="stretched-link">Continue reading</a>
           </div>
           <div class="col-auto d-none d-lg-block">
-            <img src="https://source.unsplash.com/200x200/?woman" class="bd-placeholder-img" width="200" height="250">
+            <img src="https://source.unsplash.com/200x200/?nature" class="bd-placeholder-img" width="200" height="250">
           </div>
         </div>
       </div>
@@ -248,7 +248,7 @@
             <a href="#" class="stretched-link">Continue reading</a>
           </div>
           <div class="col-auto d-none d-lg-block">
-            <img src="https://source.unsplash.com/200x200/?girl/coding" class="bd-placeholder-img" width="200"
+            <img src="https://source.unsplash.com/200x200/?coding" class="bd-placeholder-img" width="200"
               height="250">
           </div>
         </div>
